fix mobile hero buttons alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -312,3 +312,9 @@ body.no-scroll {
   transform: translateX(-50%);
   z-index: 1000;
 }
+
+@media screen and (max-width: 768px) {
+  .hero-buttons { flex-wrap: nowrap; }
+  .hero-buttons .button { width: 8rem; }
+}
+
